# php-vm

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: CODEBASE.md  REQUIREMENTS.md
scripts/: install.sh
src/: aliases.rs  archive.rs  build_unix.rs  cli.rs  config.rs  downloader.rs  main.rs  manifest.rs  resolver.rs  self_update_cmd.rs  shims.rs
src/commands/: alias.rs  cache_prune.rs  doctor.rs  exec.rs  init.rs  install.rs  list_installed.rs  list_remote.rs  mod.rs  self_update.rs  set_global.rs  set_local.rs  uninstall.rs  use_shell.rs  which.rs
src/core/: dirs.rs  mod.rs  resolver.rs
src/io/: mod.rs
src/platform/: mod.rs  shims.rs
tests/: basic.rs  commands.rs
