[package]
name = "phpvm"
version = "0.1.0"
edition = "2021"
authors = ["phpvm maintainers"]
description = "Rust-based PHP version manager (NVM-style)"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1.39", features = ["rt-multi-thread", "macros"] }
indicatif = "0.17"
sha2 = "0.10"
ring = "0.17"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
tar = "0.4"
xz2 = "0.1"
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
fs-err = "2.11"
directories = "5.0"
which = "6.0"
self_update = { version = "0.40", default-features = false, features = ["rustls"] }
num_cpus = "1.16"
futures-util = "0.3"
shell-escape = "0.1"

[target.'cfg(windows)'.dependencies]
junction = "1.2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
